2006-09-06  ARAKI Yasuhiro  <yasu@debian.or.jp>



	* donrails/app/controllers/login_controller.rb (LoginController::fix_article): Change to use manage_enrollment.
	* donrails/app/views/login/form_article.rhtml: likewise
	
	* donrails/app/helpers/application_helper.rb (ApplicationHelper::display_enrollment_images): New method.

	* donrails/app/controllers/login_controller.rb 
	(LoginController::manage_enrollment): New method.
	(LoginController::delete_enrollment): New method.


	* Change Comments and Articles relation.
	* donrails/app/models/comment_mailer.rb (CommentMailer::notify): Fix for this.
	* donrails/app/controllers/notes_controller.rb (NotesController::add_comment2): likewise.
	* donrails/app/controllers/login_controller.rb (LoginController::delete_comment): likewise.

2006-09-03  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* NEW FEATURE: version control with Enrollment table.
	* donrails/tool/tables-mysql.sql: Add entry for this. 
	(TODO): table for postgresql and sqlite.	
	* donrails/app/models/enrollment.rb: New model for it. (has_many :article)
	* donrails/app/models/article.rb: Add belongs_to :enrollment.
	* donrails/app/controllers/login_controller.rb 
	(LoginController::add_article): Change for this feature.
	(LoginController::fix_article): likewise.
	(LoginController::manage_article): likewise.
	* donrails/app/views/login/manage_article.rhtml: likewise.
	* donrails/app/views/login/new_article.rhtml: likewise.
	* donrails/app/views/login/form_article.rhtml: likewise.
	* donrails/test/unit/article_test.rb (ArticleTest): new test for it.
	* donrails/test/fixtures/enrollments.yml:  likewise.
	* donrails/test/fixtures/articles.yml: Add entry for it.

	* donrails/app/controllers/login_controller.rb (LoginController::manage_article): Add to hyde 'article.hidden = 1' articles.
	* donrails/app/views/login/manage_article.rhtml: likewise.

2006-09-02  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/login/form_article.rhtml: Add checkbox to hyde article.