@@ -1,6 +1,0 @@
-comment_1_for_article_1:
-  comment_id: 1
-  article_id: 1
-comment_2_for_article_2:
-  comment_id: 2
-  article_id: 2
