@@ -1,7 +1,7 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class ArticleTest < Test::Unit::TestCase
-  fixtures :articles, :categories, :comments, :comments_articles, :categories_articles, :enrollments
+  fixtures :articles, :categories, :comments, :categories_articles, :enrollments
 
   def setup
     @a1 = Article.find(1)
